// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`element-node.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="attribute" {{modifier}} {{! comment}}>
  Hello
</div>

<div>
  Hello
</div>

<div>
  hi
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more and more.
</div>

<div>
  {{#block}}
    {{hello}}
  {{/block}}
</div>

<div>
  {{hello}}
</div>

<div></div>
<img />

=====================================output=====================================
<div class="attribute" {{modifier}} {{! comment}}>
  Hello
</div>

<div>
  Hello
</div>

<div>
  hi
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more and more.
</div>

<div>
  {{#block}}
    {{hello}}
  {{/block}}
</div>

<div>
  {{hello}}
</div>

<div></div>
<img />
================================================================================
`;

exports[`element-node.hbs 2`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div class="attribute" {{modifier}} {{! comment}}>
  Hello
</div>

<div>
  Hello
</div>

<div>
  hi
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more and more.
</div>

<div>
  {{#block}}
    {{hello}}
  {{/block}}
</div>

<div>
  {{hello}}
</div>

<div></div>
<img />

=====================================output=====================================
<div class='attribute' {{modifier}} {{! comment}}>
  Hello
</div>

<div>
  Hello
</div>

<div>
  hi
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more.
</div>

<div>
  A long enough string to trigger a line break that would prevent wrapping more and more.
</div>

<div>
  {{#block}}
    {{hello}}
  {{/block}}
</div>

<div>
  {{hello}}
</div>

<div></div>
<img />
================================================================================
`;
